# SW

./: Android.mk  CMakeLists.txt  README.md  SW.h  SWbuffer.c  SWbuffer.h  SWcontext.c  SWcontext.h  SWcore.c  SWcore.h  SWculling.c  SWculling.h  SWframebuffer.c  SWframebuffer.h  SWpixels.h  SWprogram.c  SWprogram.h  SWrasterize.h  SWtexture.h  SWtypes.h  SWzbuffer.c  SWzbuffer.h  _SW.c
game_assets/: link.txt
src/: CMakeLists.txt
src/SW/: Android.mk  CMakeLists.txt  SW.h  SWbuffer.c  SWbuffer.h  SWcompress.c  SWcompress.h  SWcontext.c  SWcontext.h  SWcore.c  SWcore.h  SWcpu.c  SWcpu.h  SWdraw.c  SWframebuffer.c  SWframebuffer.h  SWpixels.h  SWprogram.c  SWprogram.h  SWrasterize.c  SWrasterize.h  SWtexture.c  SWtexture.h  SWtypes.h  SWzbuffer.c  SWzbuffer.h  _SW.c
src/SW/tests/: CMakeLists.txt  main.c  test_buffer.c  test_common.h  test_context.c  test_framebuffer.c  test_pixels.c  test_program.c  test_texture.c  test_zbuffer.c
src/libs/: link.txt
src/the_game/: CMakeLists.txt  Game.cpp  Game.h  GameApp.cpp  GameApp.h  _game.cpp  main.cpp
src/the_game/comp/: Drawable.cpp  Drawable.h  ISerializable.h  Transform.cpp  Transform.h  _comp.cpp
src/the_game/eng/: Config.h  FlowControl.cpp  FlowControl.h  FrameInfo.h  GameBase.cpp  GameBase.h  GameState.h  GameStateManager.cpp  GameStateManager.h  Go.cpp  Go.h  GoAlloc.h  GoComponent.h  GoID.h  ObjectPool.h  Random.cpp  Random.h  TimedInput.cpp  TimedInput.h  _eng.cpp
src/the_game/eng/ren/: Android.mk  Anim.cpp  Anim.h  CMakeLists.txt  Camera.cpp  Camera.h  FrameBuf.h  FrameBufGL.cpp  GL.h  Material.cpp  Material.h  Matrices_old.cpp  Matrices_old.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Program.cpp  Program.h  ProgramGL.cpp  RenderState.cpp  RenderState.h  RenderStateGL.h  RenderStateSW.h  RenderStateVK.cpp  RenderStateVK.h  RenderThread.cpp  RenderThread.h  RingBuffer.h  SparseArray.h  Texture.cpp  Texture.h  TextureGL.cpp  TextureSW.cpp  _ren.cpp
src/the_game/eng/ren/tests/: CMakeLists.txt  main.cpp  test_anim.cpp  test_common.h  test_material.cpp  test_mesh.cpp  test_programGL.cpp  test_programSW.cpp  test_render_state.cpp  test_sparse_array.cpp  test_texture.cpp
src/the_game/eng/sys/: Android.mk  AssetFile.cpp  AssetFile.h  AssetFileIO.cpp  AssetFileIO.h  CMakeLists.txt  Delegate.h  Json.cpp  Json.h  Log.h  Optional.h  Pack.cpp  Pack.h  Signal_.h  SpinLock.h  ThreadPool.h  ThreadWorker.h  Time.cpp  Time_.h  _sys.cpp
src/the_game/eng/sys/tests/: CMakeLists.txt  main.cpp  test_common.h  test_json.cpp  test_optional.cpp  test_pack.cpp  test_signal.cpp
src/the_game/eng/ui/: Android.mk  BaseElement.cpp  BaseElement.h  BitmapFont.cpp  BitmapFont.h  ButtonBase.cpp  ButtonBase.h  ButtonImage.cpp  ButtonImage.h  ButtonText.cpp  ButtonText.h  CMakeLists.txt  Container.h  Cursor.cpp  Cursor.h  EditBox.cpp  EditBox.h  Frame.cpp  Frame.h  Image.cpp  Image.h  LinearLayout.cpp  LinearLayout.h  Renderer.h  RendererGL.cpp  RendererSW.cpp  TypeMesh.cpp  TypeMesh.h  Utils.cpp  Utils.h  _ui.cpp
src/the_game/eng/ui/tests/: CMakeLists.txt  main.cpp  test_renderer.cpp  test_widgets.cpp
src/the_game/gui/: CodeLockUI.cpp  CodeLockUI.h  DrawTestUI.cpp  DrawTestUI.h  FontStorage.h  GBackground.cpp  GBackground.h  GCursor.cpp  GCursor.h  LoadingIcon.cpp  LoadingIcon.h  LoadingIconSW.cpp  LoadingUI.cpp  LoadingUI.h  MenuUI.cpp  MenuUI.h  _gui.cpp
src/the_game/managers/: PlayerController.cpp  PlayerController.h  Renderer.cpp  Renderer.h  RendererSW.cpp  SceneManager.cpp  SceneManager.h  _managers.cpp
src/the_game/states/: GSCreate.cpp  GSCreate.h  GSDrawTest.cpp  GSDrawTest.h  GSDrawTestSW.cpp  GSLoading.cpp  GSLoading.h  GSMenu.cpp  GSMenu.h  GSRunning.cpp  GSRunning.h  GSTransition.cpp  GSTransition.h  _states.cpp
tests/: test_buffer.c  test_common.h  test_context.c  test_framebuffer.c  test_pixels.c  test_program.c  test_texture.c  test_zbuffer.c
